<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?android:attr/selectableItemBackground"
	android:minHeight="48dp">


	<com.github.johnkil.print.PrintView
		android:id="@+id/arrow_icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		app:print_iconColor="#12558C"
		app:print_iconFont="fonts/material-icon-font.ttf"
		app:print_iconSize="20dp"
		app:print_iconText="@string/ic_keyboard_arrow_right"/>

	<com.github.johnkil.print.PrintView
		android:id="@+id/icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignWithParentIfMissing="true"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:layout_toRightOf="@id/arrow_icon"
		app:print_iconColor="#12558C"
		app:print_iconFont="fonts/material-icon-font.ttf"
		app:print_iconSize="24dp"
		app:print_iconText="@string/ic_email"/>

	<TextView
		android:id="@+id/node_value"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_marginLeft="10dp"
		android:layout_toLeftOf="@+id/buttonsContainer"
		android:layout_toRightOf="@+id/icon"
		android:textSize="16sp"/>


	<LinearLayout
		android:id="@+id/buttonsContainer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_centerVertical="true"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp">

		<com.github.johnkil.print.PrintView
			android:id="@+id/btn_addFolder"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="5dp"
			app:print_iconColor="#99cc00"
			app:print_iconFont="fonts/material-icon-font.ttf"
			app:print_iconSize="20dp"
			app:print_iconText="@string/ic_add"/>


		<com.github.johnkil.print.PrintView
			android:id="@+id/btn_delete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="5dp"
			app:print_iconColor="#ff4444"
			app:print_iconFont="fonts/material-icon-font.ttf"
			app:print_iconSize="20dp"
			app:print_iconText="@string/ic_close"/>
	</LinearLayout>
</RelativeLayout>
